--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.1",
-    "bootstrap": "^5.3.0"
+    "bootstrap": "^5.3.0",
+        "vite": "^5.0.0"
+
   },
   "devDependencies": {
-    "vite": "^5.0.0"
-  },
+   },
   "engines": {
   "node": ">=18"
 }
