--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "bootstrap": "^5.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1"
-  },
-  "devDependencies": {
+    "react-router-dom": "^6.14.1",
     "@vitejs/plugin-react": "^5.1.1",
     "vite": "^5.4.21"
   },
+  "devDependencies": {},
   "engines": {
     "node": ">=18"
   }
